--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,7 @@
 
 /* CPMS */
 
-@import './cmps/book-list.css';
+/* @import './cmps/book-list.css';
 @import './cmps/book-preview.css';
 @import './cmps/book-filter.css';
 @import './cmps/book-details.css';
@@ -13,6 +13,6 @@
 @import './cmps/book-add.css';
 
 
-
+ */
 
 
