--- a/style/helpers.css
+++ b/style/helpers.css
@@ -65,3 +65,67 @@
 .column-layout >*:not(:last-child) {
     margin-bottom: 7.5px;
 }
+
+.tbl{
+background-color:lightgrey;
+width: 70%;
+text-align: center;
+margin-left: 5%;
+border-collapse: collapse;
+
+}
+
+  .row{ 
+      height: 30px;
+      text-align: left    ;
+    /* padding-bottom: 10px;
+    padding-top: 10px; */
+    padding-left: 10px;
+    box-shadow: inset 0 -1px 0 0 rgba(10, 8, 44, 0.122);
+    /* outline: thin solid black; */
+}  
+
+.row:hover{  
+
+    box-shadow: inset 1px 0 0  #dadce0,
+    inset  -1px 0 0 #dadce0,
+    0 1px 2px 0 rgba(60,64,67,.3),
+    0 1px 3px 1px rgba(60,64,67,.15);
+    z-index: 1;
+ }
+
+.content{
+
+    width: 400px;
+    height: 200px;
+    margin-left: 25%;
+    background-color: darkkhaki;
+    border: thin black;
+
+      }
+
+    .app{
+        margin-left: 15%;
+    }
+    .compose{
+        background-color:lightgrey;
+        height: 50px;
+        width:75px;
+        border-radius:50%;
+        border: thin black;  
+        box-shadow: inset 0 -1px 0 0 rgba(10, 8, 44, 0.122); 
+    }
+    .compose:hover{  
+
+        box-shadow: inset 1px 0 0  #dadce0,
+        inset  -1px 0 0 #dadce0,
+        0 1px 2px 0 rgba(60,64,67,.3),
+        0 1px 3px 1px rgba(60,64,67,.15);
+        z-index: 1;
+     }
+     .unread{
+         font-weight: bolder;
+     }
+  
+
+
