--- a/style/helpers.css
+++ b/style/helpers.css
@@ -107,7 +107,7 @@ border-collapse: collapse;
     .app{
         margin-left: 15%;
     }
-    .compose{
+    .special-btn{
         background-color:lightgrey;
         height: 50px;
         width:75px;
@@ -115,7 +115,7 @@ border-collapse: collapse;
         border: thin black;  
         box-shadow: inset 0 -1px 0 0 rgba(10, 8, 44, 0.122); 
     }
-    .compose:hover{  
+    .special-btn:hover{  
 
         box-shadow: inset 1px 0 0  #dadce0,
         inset  -1px 0 0 #dadce0,
