--- a/style/apps/books/books-main.css
+++ b/style/apps/books/books-main.css
@@ -2,4 +2,14 @@
 
 /* CPMS */
 
-@import './cmps/note-preview.css';
+@import './cmps/book-list.css';
+@import './cmps/book-preview.css';
+@import './cmps/book-filter.css';
+@import './cmps/book-details.css';
+@import './cmps/review-add.css';
+@import './cmps/user-msg.css';
+@import './cmps/book-add.css';
+
+
+
+
