--- a/style/apps/keep/cmps/note-list.cmp.css
+++ b/style/apps/keep/cmps/note-list.cmp.css
@@ -1,6 +1,10 @@
 .note-list {
-    column-count: 3;
-    column-gap: 1rem;
+    /* column-count: 3;
+    column-gap: 1rem; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 200px);
+    justify-content: center;
+    grid-gap: 1rem;
     max-width: 700px;
     margin: 0 auto
 }
@@ -24,4 +28,8 @@
 
 .unpinned {
     color: gray;
+}
+
+.showBar .hide {
+    display: none;
 }
