--- a/style/apps/keep/cmps/note-list.cmp.css
+++ b/style/apps/keep/cmps/note-list.cmp.css
@@ -2,7 +2,7 @@
     /* column-count: 3;
     column-gap: 1rem; */
     display: grid;
-    grid-template-columns: repeat(auto-fill, 200px);
+    grid-template-columns: repeat(auto-fit, 200px);
     justify-content: center;
     grid-gap: 1rem;
     max-width: 700px;
