--- a/style/apps/keep/cmps/note-preview.cmp.css
+++ b/style/apps/keep/cmps/note-preview.cmp.css
@@ -1,12 +1,17 @@
 .note-preview {
-    border: 1px solid black;
-    padding: 1rem;
+  border: 1px solid black;
+  padding: 1rem;
 }
 
 .note-preview img {
-    width: 100%;
+  width: 100%;
 }
 
 .note-title {
-    font-weight: bold;
+  font-weight: bold;
+}
+
+.note-preview:hover {
+  /* box-shadow: 5px 10px #888888; */
+  box-shadow: 0 0 15px black;
 }
