--- a/style/base.css
+++ b/style/base.css
@@ -9,7 +9,7 @@ body {
     text-align: center;
 }
 
-h1, h2 {
+h1, h2, h4 {
     margin: 0;
 }
 
@@ -23,7 +23,7 @@ input {
 }
 
 .router-link-exact-active {
-    color: lightgreen
+    color: rgba(146, 29, 101, 0.753)
 }
 
 a {
@@ -35,4 +35,9 @@ button {
     background-color: white;
     outline: none;
     border-radius: 5px;
+}
+
+.logo {
+    font-family: piedra;
+    letter-spacing: .2rem;
 }
