--- a/style/base.css
+++ b/style/base.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     height: 100vh;
     text-align: center;
-    /* font-family: poppins; */
+    font-family: poppins;
 }
 
 h1, h2, h4 {
