--- a/style/helpers.css
+++ b/style/helpers.css
@@ -200,10 +200,13 @@ left: 18%;
          /* font-style: oblique; */
      }
      .nav-inbox{
+         height: 50px;
         max-width: 85%;
         margin-left: 8%;
         margin-top: 20px;
-        border: solid 0.5px rgb(151, 93, 151);
+        padding: 10px;
+        box-shadow: 5px 10px 18px #888888;
+        border-radius: 10px;
     }
     .mail-sort{
         background-color: rgba(115, 123, 129, 0.3);
