--- a/style/apps/keep/keep-main.css
+++ b/style/apps/keep/keep-main.css
@@ -8,3 +8,4 @@
 @import './cmps/note-preview.cmp.css';
 @import './cmps/note-list.cmp.css';
 @import './cmps/note-add.cmp.css';
+@import './cmps/note-todos.cmp.css';
