--- a/style/base.css
+++ b/style/base.css
@@ -41,4 +41,9 @@ button {
 .logo {
     font-family: piedra;
     letter-spacing: .2rem;
+    text-shadow: 1px 3px 0 #d395bb, 1px 2px 5px #be6499;
+}
+
+i {
+    cursor: pointer;
 }
