--- a/style/main.css
+++ b/style/main.css
@@ -18,6 +18,9 @@
   .new-note {
     flex-direction: column;
   }
+  .main-home-page {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 400px) {
