--- a/style/helpers.css
+++ b/style/helpers.css
@@ -1,3 +1,4 @@
+
 /*pre-helpers*/
 /* * {
     box-sizing: border-box;
@@ -294,6 +295,23 @@ height: 700px;
     /* width: 500px; */
 }
 
+/*.chkIsRead { display:none; } to hide the checkbox */
+.chkIsRead {
+  font-family: FontAwesome;
+  display: inline-block;
+}
+
+/* <i class="fa fa-envelope-open" aria-hidden="true"></i> */
+/* <i class="fa fa-envelope-open" aria-hidden="true"></i> */
+
+
+
+
+/* input[type=checkbox] + label:before { content: "\f096"; } unchecked icon */
+/* input[type=checkbox] + label:before { letter-spacing: 10px; } space between checkbox and label */
+
+/* input[type=checkbox]:checked + label:before { content: "\f046"; } checked icon */
+/* input[type=checkbox]:checked + label:before { letter-spacing: 5px; } allow space for check mark */
 
 
 
