--- a/style/pages/home.cmp.css
+++ b/style/pages/home.cmp.css
@@ -1,11 +1,11 @@
 .main-home-page {
-     /* background-image: url('../../img/appsus/back3.png');  */
+  align-items: center;
 }
 
-.main-home-page >* {
-    width: 50%;
+.main-home-page > * {
+  width: 50%;
 }
 
 .main-home-page img {
-    width: 100%;
+  width: 100%;
 }
