--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,8 @@
 /* Pages */
 @import "./pages/about.cmp.css";
 @import "./pages/home.cmp.css";
+@import "./pages/header.cmp.css";
+
 
 @media (max-width: 700px) {
   .new-note {
