--- a/style/pages/about.cmp.css
+++ b/style/pages/about.cmp.css
@@ -37,13 +37,16 @@
     display: block;
     width: 30px;
     height: 30px;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+    transition: all 0.4s;
     color: white;
     border-radius: 100%;
     outline: none;
     background-color: #222222;
+    margin-left: 2px;
+}
+
+.social-buttons a:hover {
+    color: rgba(146, 29, 101, 0.753);
 }
 
 /* .tm-dit {
