--- a/style/apps/mail/mail-main.css
+++ b/style/apps/mail/mail-main.css
@@ -1,4 +1,15 @@
-.tbl{
+
+
+/* CPMS */
+
+@import './cmps/mail-list.cmp.css';
+@import './cmps/mail-app.cmp.css';
+
+
+
+
+
+/* .tbl{
     background-color:lightgrey;
     width: 70%;
     text-align: center;
@@ -10,11 +21,9 @@
       .row{ 
           height: 30px;
           text-align: left    ;
-        /* padding-bottom: 10px;
-        padding-top: 10px; */
         padding-left: 10px;
         box-shadow: inset 0 -1px 0 0 rgba(10, 8, 44, 0.122);
-        /* outline: thin solid black; */
+
     }  
     
     .row:hover{  
@@ -31,9 +40,7 @@
       .nav-inbox{
         display: flex;
         flex-direction: row;
-        /* max-width: 85%; */
         margin-left: 8%;
         margin-top: 20px;
-        /* border: solid 0.5px rgb(151, 93, 151); */
     }
-  }
+  } */
