--- a/style/layout.css
+++ b/style/layout.css
@@ -34,17 +34,14 @@ main {
     margin-right: 1rem;
     border-radius: 5px;
   }
-  
-.new-mail {
-    position: fixed;
-    background-color: rgba(255, 255, 255);
-    bottom: 0;
-    right: 0;
-    margin-right: 1rem;
-    z-index: 1;
-}
 
-.new-mail input {
-    border: none;
-}
   
+.user-message{
+    position: fixed;
+    top: 2rem;
+    left: 12rem;
+    transform: all 1s;
+    color: black;
+    font-weight: bolder;
+    text-shadow: 0 0 10px #FFFFFF;
+}
